# transgenderwachttijd-backend

./: .env.example  .gitignore  Dockerfile  Pipfile  README.md  compose.yaml  manage.py  pyproject.toml  start.sh  start_queue.sh  test.py
.github/workflows/: pipeline.yml
application/: asgi.py  wsgi.py
application/settings/: base.py  development.py
articles/: admin.py  apps.py  models.py  schema.py  tasks.py  types.py
articles/migrations/: 0003_add_article_category.py
docs/: development.md  index.md  production.md
providers/: admin.py  apps.py  models.py  schema.py  tasks.py  types.py  util.py  views.py
providers/fixtures/: prodivers.json
providers/migrations/: 0001_initial.py
providers/scrapers/: __init__.py  amc.py  base.py  devaart.py  jonx.py  oog.py  psytrans.py  radboudumc.py  stepwork.py  umcg.py  vumc.py
scripts/: start_queue.sh  start_server.sh
services/: admin.py  models.py  resolvers.py  resolves.py  schema.py  translation.py  types.py
services/fixtures/: services.json
services/migrations/: 0001_initial.py  0003_add_service_medical_name.py  0004_add_service_time_details.py  0005_fix_service_dependencies.py
transgenderwachttijd/: logging.py  schema.py  sentry.py  urls.py  wsgi.py
transgenderwachttijd/articles/: apps.py  tasks.py  translation.py  types.py
transgenderwachttijd/articles/migrations/: 0001_initial.py  0002_update_article.py  0004_update_article_category.py
transgenderwachttijd/providers/: apps.py  schema.py  tasks.py  types.py  util.py
transgenderwachttijd/providers/fixtures/: prodivers.json
transgenderwachttijd/providers/scrapers/: __init__.py  amc.py  devaart.py  genderhealthcare.py  psytrans.py  umcg.py
transgenderwachttijd/services/: apps.py  models.py  translation.py  types.py
transgenderwachttijd/services/migrations/: 0002_fix_service_parent.py
transgenderwachttijd/settings/: base.py  development.py  production.py
transgenderwachttijd/templates/: base.html
