[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "transgenderwachttijd"
version = "0.1.0"
description = "Tracking waiting times for transgender health care in the Netherlands."
authors = ["Danielle Huisman <danielle@huisman.me>"]
maintainers = ["Danielle Huisman <danielle@huisman.me>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/DanielleHuisman/transgenderwachttijd-backend"
repository = "https://github.com/DanielleHuisman/transgenderwachttijd-backend"

keywords = ["transgender", "waiting", "times"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "License :: OSI Approved :: MIT License",
    "Private :: Do Not Upload",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.22"
django-cors-headers = "^4.7.0"
django-filter = "^25.1"
django-modeltranslation = "^0.19.15"
django-q2 = "^1.8.0"
feedparser = "^6.0.11"
gunicorn = "^23.0.0"
requests = "^2.32.4"
pdfreader = "^0.1.15"
mysqlclient = "^2.2.7"
python-dotenv = "^1.1.0"
pytz = "^2025.2"
sentry-sdk = "^2.29.1"
strawberry-graphql = "^0.271.0"
strawberry-graphql-django = "^0.60.0"
beautifulsoup4 = "^4.13.4"
croniter = "^2.0.1"

[tool.poetry.extras]
django-q = ["sentry"]
